Base/huginn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huginn
  labels:
    app: huginn
    component: service
spec:
  type: NodePort
  selector:
    app: huginn
    component: deployment
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 3000
