Base/huginn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: huginn-ingress
  # annotations:
    # kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - host: huginn.local.gd
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: huginn
            port:
              number: 80
